--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					
 					</td>
 					<td>
-						<img src="/home.jpg" alt="Image 3">
+						<img src="./home.jpg" alt="Image 3">
 					
 					</td>
 				</tr>
